--- a/configs/datasets/imagenav/gibson.yaml
+++ b/configs/datasets/imagenav/gibson.yaml
@@ -21,3 +21,8 @@ TASK:
   MEASUREMENTS: ['DISTANCE_TO_GOAL', 'SUCCESS', 'SPL']
   SUCCESS:
     SUCCESS_DISTANCE: 0.2
+
+DATASET:
+  TYPE: PointNav-v1
+  SPLIT: train
+  DATA_PATH: data/datasets/pointnav/gibson/v1/{split}/{split}.json.gz
