--- a/configs/tasks/imagenav.yaml
+++ b/configs/tasks/imagenav.yaml
@@ -16,7 +16,7 @@ TASK:
   SUCCESS_DISTANCE: 0.2
 
   SENSORS: ['IMAGEGOAL_SENSOR']
-  GOAL_SENSOR_UUID: imagegoal_sensor
+  GOAL_SENSOR_UUID: imagegoal
 
   MEASUREMENTS: ['DISTANCE_TO_GOAL', 'SPL']
   SPL:
