--- a/habitat_baselines/config/imagenav/ddppo_imagenav_example.yaml
+++ b/habitat_baselines/config/imagenav/ddppo_imagenav_example.yaml
@@ -1,4 +1,4 @@
-BASE_TASK_CONFIG_PATH: "configs/datasets/imagenav/gibson.yaml"
+BASE_TASK_CONFIG_PATH: "configs/tasks/imagenav.yaml"
 TRAINER_NAME: "ddppo"
 ENV_NAME: "NavRLEnv"
 SIMULATOR_GPU_ID: 0
@@ -8,7 +8,7 @@ TENSORBOARD_DIR: "tb"
 VIDEO_DIR: "video_dir"
 TEST_EPISODE_COUNT: 994
 EVAL_CKPT_PATH_DIR: "data/new_checkpoints"
-NUM_PROCESSES: 4
+NUM_PROCESSES: 1
 SENSORS: ["RGB_SENSOR", "DEPTH_SENSOR"]
 CHECKPOINT_FOLDER: "data/new_checkpoints"
 NUM_UPDATES: 100000
@@ -32,7 +32,7 @@ RL:
     # ppo params
     clip_param: 0.2
     ppo_epoch: 2
-    num_mini_batch: 2
+    num_mini_batch: 1
     value_loss_coef: 0.5
     entropy_coef: 0.01
     lr: 2.5e-4
